# src/routes/restaurant.route.js
@@ -9,6 +9,7 @@ import {
 } from '../dto/in/restaurant.dto.js'
 import { handleValidationErrors } from '../middlewares/validation.middleware.js'
 import { authenticationAdmin, authenticationStaff, requireApiKey } from '../middlewares/useApiKey.middleware.js'
+import { uploadMultipleFiles } from '../middlewares/upload.middleware.js'
 const RestaurantRouter = express.Router()
 
 RestaurantRouter.get('/', RestaurangGetAllValidation, handleValidationErrors, RestaurantController.getAllRestaurant)
@@ -17,6 +18,7 @@ RestaurantRouter.get('/promotions', RestaurangGetAllValidation, handleValidation
 RestaurantRouter.get(
   '/restaurant/:id',
   RestaurantGetByIdValidation,
+  requireApiKey,
   handleValidationErrors,
   RestaurantController.getRestaurantById
 )
@@ -25,6 +27,7 @@ RestaurantRouter.post(
   
   requireApiKey,
   authenticationAdmin,
+  uploadMultipleFiles,
   RestaurantController.createRestaurant
 )
 RestaurantRouter.put(
@@ -47,4 +50,7 @@ RestaurantRouter.get('/own', requireApiKey, authenticationAdmin, RestaurantContr
 RestaurantRouter.get('/staff', requireApiKey, authenticationStaff, RestaurantController.getStaffRestaurant)
 RestaurantRouter.get('/provinces', RestaurantController.getProvinces);
 RestaurantRouter.get('/districts/:provinceCode', RestaurantController.getDistrictsByProvince);
+RestaurantRouter.get('/suggested-restaurants', requireApiKey, RestaurantController.getSuggestedRestaurantsForUser);
+RestaurantRouter.get('/nearby', RestaurantController.getNearbyRestaurants);
+
 export default RestaurantRouter
